--- a/src/components/pages/ServicesPage.astro
+++ b/src/components/pages/ServicesPage.astro
@@ -8,5 +8,15 @@ interface Props {
 ---
 
 <NavLayout language={Astro.props.language}>
-    <h1>SERVICES</h1>
+    <!-- * Services Section * -->
+
+    <section>
+
+    </section>
+
+    <!-- * Call-To-Action Section * -->
+
+    <section>
+
+    </section>
 </NavLayout>
