--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,21 +1,21 @@
 @font-face {
   font-family: 'InstrumentSerif';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   src: url('/fonts/instrument_serif/InstrumentSerif-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Kreon';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   src: url('/fonts/kreon/Kreon-VariableFont_wght.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'LaBelleAurore';
   font-style: normal;
-  font-weight: 400;
+  font-weight: 300;
   src: url('/fonts/la_belle_aurore/LaBelleAurore-Regular.ttf') format('truetype');
 }
 
@@ -34,12 +34,17 @@
     --color-chn-black-highlight: #000000;
     --color-chn-green-highlight: #a4a26e;
 
-    --text-xl: 3.375rem;
+    --color-chn-hyperlink-blue: #1577F3;
+    --color-chn-hyperlink-highlight: #50a2ff;
+
+    --text-2xl: 3.375rem;
+    --text-xl: 2.000rem;
     --text-lg: 1.500rem;
     --text-md: 1.000rem;
     --text-sm: 0.875rem;
     --text-xs: 0.750rem;
 
+    --text-2xl-line-height: calc(calc(0.25rem + var(--text-xl)) / var(--text-2xl));
     --text-xl-line-height: calc(calc(0.25rem + var(--text-xl)) / var(--text-xl));
     --text-lg-line-height: calc(calc(0.25rem + var(--text-xl)) / var(--text-lg));
     --text-md-line-height: calc(calc(0.25rem + var(--text-xl)) / var(--text-md));
@@ -75,24 +80,38 @@ html, body {
 .text-dark { color: var(--color-text-dark); }
 .text-darker { color: var(--color-text-darker); }
 
+.text-2xl { font-size: var(--text-2xl); line-height: var(--text-2xl-line-height); }
 .text-xl { font-size: var(--text-xl); line-height: var(--text-xl-line-height); }
 .text-lg { font-size: var(--text-lg); line-height: var(--text-lg-line-height); }
 .text-md { font-size: var(--text-md); line-height: var(--text-md-line-height); }
 .text-sm { font-size: var(--text-sm); line-height: var(--text-sm-line-height); }
 .text-xs { font-size: var(--text-xs); line-height: var(--text-xs-line-height); }
 
+.text-center { text-align: center; }
+
 .weight-thin { font-weight: lighter; }
 .weight-normal { font-weight: normal; }
 .weight-bold { font-weight: bold; }
 
+.hyperlink {
+    color: var(--color-chn-hyperlink-blue);
+    text-decoration: none;
+}
+
+.hyperlink:hover {
+    color: var(--color-chn-hyperlink-highlight);
+    text-decoration: underline;
+}
+
 .drop-shadow { box-shadow: 0 0.5rem 0.5rem 0 #00000040; }
+.text-shadow { text-shadow: 0 0.25rem 0.25rem #00000080;}
 
 .chn-black-button {
     color: var(--color-text-light);
     background-color: var(--color-chn-black);
 
     border: none;
-    border-radius: 2rem;
+    border-radius: 0.5rem;
 
     width: fit-content;
     height: fit-content;
@@ -118,7 +137,7 @@ html, body {
     background-color: var(--color-chn-green);
 
     border: none;
-    border-radius: 2rem;
+    border-radius: 0.5rem;
 
     width: fit-content;
     height: fit-content;
