--- a/src/components/layouts/NavLayout.astro
+++ b/src/components/layouts/NavLayout.astro
@@ -1,8 +1,8 @@
 ---
 import "../../styles/nav_layout.css";
 import Image from "astro/components/Image.astro";
-import contact_info from "../../config/contact_info";
 import translate from "../../utils/content/translation";
+import contact_info from "../../config/contact_info.json";
 import chn_white from "../../assets/logos/chn_white.webp";
 import GoogleMapsEmbed from "../embeds/GoogleMapsEmbed.astro";
 import nav_links, { type NavLink } from "../../config/nav_links";
