--- a/src/styles/home_page.css
+++ b/src/styles/home_page.css
@@ -19,7 +19,7 @@
 
 .hero-section {
     position: relative;
-    height: calc(100vh - 14rem);
+    height: calc(100vh - 4rem - 50px);
     min-height: 60vh;
 
     display: flex;
@@ -43,6 +43,12 @@
     gap: 2rem;
 
     margin-top: 4rem;
+}
+
+.home-large-title {
+    width: fit-content;
+    margin: 0 auto 2rem auto;
+    text-align: center;
 }
 
 .home-flex-container {
@@ -69,15 +75,72 @@
 
 .reviews-section {
     position: relative;
+
+    padding-top: 4rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    padding-bottom: calc(4rem + 50px);
+}
+
+.review-cards-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: stretch;
+    gap: 4rem;
+    flex-wrap: wrap;
+}
+
+.gallery-section {
+    padding: 4rem 4rem;
+}
+
+.gallery-images-grid {
+    width: 100%;
+    column-count: 5;
+    column-gap: 1rem;
+}
+
+.gallery-image {
+    width: 100%;
+    height: auto;
+    aspect-ratio: var(--gallery-image-aspect);
+
+    display: block;
+    margin-bottom: 1rem;
+
+    object-fit: cover;
+    break-inside: avoid;
+
+    transition:
+        transform 150ms ease-in-out 0s,
+        box-shadow 150ms ease-in-out 0s;
+}
+
+.gallery-image:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0.5rem 1rem 0 #00000080;
 }
 
 .home-facebook-embed {
     display: flex;
     width: fit-content;
+    overflow: hidden;
 }
 
 .home-facebook-embed > * {
     border: none;
+}
+
+@media (max-width: 56rem) {
+    .gallery-images-grid {
+        column-count: 4;
+    }
+}
+
+@media (max-width: 48rem) {
+    .gallery-images-grid {
+        column-count: 3;
+    }
 }
 
 @media (max-width: 40rem) {
@@ -90,12 +153,17 @@
     }
 
     .home-facebook-embed {
-        display: flex;
         width: 100%;
-        overflow: hidden;
     }
 
-    .home-facebook-embed > * {
-        border: none;
+    .reviews-section {
+        position: relative;
+
+        padding-left: 4rem;
+        padding-right: 4rem;
+    }
+
+    .gallery-images-grid {
+        column-count: 2;
     }
 }
