Nav Hamburger Style - Slight Adjustments

--- a/src/components/layouts/NavLayout.astro
+++ b/src/components/layouts/NavLayout.astro
@@ -68,6 +68,12 @@ function isPageLink(href: string): boolean {
                 </a>
             ))}
         </div>
+
+        <button class="nav-hamburger-button">
+            <div class="nav-hamburger-bar" />
+            <div class="nav-hamburger-bar" />
+            <div class="nav-hamburger-bar" />
+        </button>
     </nav>
 
     <!-- * Page Content Slot * -->
