--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,13 +29,13 @@
     --color-chn-tan: #f3f0e7;
     --color-chn-brown: #46381e;
     --color-chn-black: #191917;
-    --color-chn-green: #807f6c;
+    --color-chn-green: #656126;
 
     --color-chn-black-highlight: #000000;
-    --color-chn-green-highlight: #a4a26e;
+    --color-chn-green-highlight: #7d7939;
 
-    --color-chn-hyperlink-blue: #1577F3;
-    --color-chn-hyperlink-highlight: #50a2ff;
+    --color-chn-hyperlink-blue: #50a2ff;
+    --color-chn-hyperlink-highlight: #00d3f2;
 
     --text-2xl: 3.375rem;
     --text-xl: 2.000rem;
