--- a/src/styles/nav_layout.css
+++ b/src/styles/nav_layout.css
@@ -26,6 +26,39 @@
     text-decoration: none;
 }
 
+.nav-hamburger-button {
+    display: none;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    width: 2.5rem;
+
+    padding: 0.25rem;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: 2rem;
+
+    background-color: transparent;
+    border: none;
+
+    cursor: pointer;
+}
+
+.nav-hamburger-button:hover > div {
+    background-color: var(--color-text-bright);
+}
+
+.nav-hamburger-bar {
+    width: 100%;
+    height: 0.25rem;
+
+    background-color: var(--color-text-light);
+    border-radius: 0.125rem;
+
+    transition: background-color 150ms ease-in-out 0s;
+}
+
 .footer-bar {
     display: flex;
     justify-content: space-between;
@@ -93,6 +126,10 @@
     .footer-bar {
         padding-left: 2rem;
         padding-right: 2rem;
+    }
+
+    .nav-hamburger-button {
+        display: flex;
     }
 }
 
